@@ -85,6 +85,9 @@ bool WinRegistryConfiguration::getRaw(const std::string& key, std::string& value
 		case WinRegistryKey::REGT_DWORD:
 			value = Poco::NumberFormatter::format(aKey.getInt(keyName));
 			break;
+		case WinRegistryKey::REGT_QWORD:
+			value = Poco::NumberFormatter::format(aKey.getInt64(keyName));
+			break;
 		default:
 			exists = false;
 		}
